--- a/force-app/main/default/lwc/fs_CampoPendienteCaso/fs_CampoPendienteCaso.html
+++ b/force-app/main/default/lwc/fs_CampoPendienteCaso/fs_CampoPendienteCaso.html
@@ -217,6 +217,141 @@
     </template>
 
 
+    <template if:true={data.pendienteInstalacionParcheDetalle}>
+        <lightning-layout vertical-align="stretch" multiple-rows="true">
+            <lightning-layout-item flexibility="auto" padding="around-small" size="12">
+                <lightning-card icon-name="standard:answer_best" title="Instalación Parche">
+                    <lightning-layout vertical-align="stretch" multiple-rows="true">
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="6">
+                            <h1>Tienes Pendiente la Instalación Parche</h1>
+                        </lightning-layout-item>
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="6">
+                            <br />
+                            <lightning-button label="Contestar" title="Contestar" variant="brand" name="contestar"
+                                class="slds-m-left_x-small" onclick={popRespuesta}></lightning-button>
+                        </lightning-layout-item>
+                    </lightning-layout>
+                </lightning-card>
+            </lightning-layout-item>
+        </lightning-layout>
+    </template>
+    <template if:true={data.pendienteInstalacionParche}>
+        <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true"
+            aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
+            <div class="slds-modal__container">
+                <header class="slds-modal__header">
+                    <h1 id="modal-heading-05" class="slds-text-heading_medium slds-hyphenate">Instalación de Parche</h1>
+                </header>
+                <div class="slds-modal__content slds-p-around_medium ">
+                    <div class="slds-form slds-form_compound slds-align--absolute-left">
+                        <fieldset class="slds-form-element">
+                            <div class="slds-modal__content slds-p-around--medium">
+                                <lightning-layout vertical-align="stretch" multiple-rows="true">
+                                    <lightning-layout-item flexibility="auto" padding="around-small" size="12">
+                                        <lightning-card icon-name="standard:answer_best" title="Instalación de Parche">
+                                            <lightning-layout vertical-align="stretch" multiple-rows="true">
+                                                <lightning-layout-item flexibility="auto" padding="around-small" size="12">
+                                                    <a href={data.caso.FS_URLParcheCliente__c}  target="_blank" > {data.caso.FS_URLParcheCliente__c} </a>
+                                                </lightning-layout-item>
+                                                <lightning-layout-item flexibility="auto" padding="around-small" size="6">
+                                                    <lightning-combobox name="aceptaParche" label="Acepta Instalación"
+                                                        value={data.caso.FS_AceptaInstalacionParche__c} options={data.listAceptaRespuesta}
+                                                        onchange={handleChange} placeholder="Seleccione una Opción">
+                                                    </lightning-combobox>
+                                                </lightning-layout-item>
+                                                <lightning-layout-item flexibility="auto" padding="around-small" size="6" if:true={data.mostrarRechazo} >
+                                                    <lightning-combobox name="motivoRechazoParche" label="Motivo Rechazo"
+                                                    value={data.caso.FS_MotivosRechazoInstalacionParche__c} options={data.listMotivosRechazoParche}
+                                                    onchange={handleChange} placeholder="Seleccione una Motivo">
+                                                </lightning-combobox>
+                                                </lightning-layout-item>
+                                                <lightning-layout-item flexibility="auto" padding="around-small" size="12">
+                                                    <lightning-textarea name="comentarioParch" label="Comentarios" vaue={data.caso.FS_ComentarioMotivoNoInstalacionParche__c}
+                                                    onchange={handleChange}></lightning-textarea>
+                                                </lightning-layout-item>
+                                            </lightning-layout>
+                                        </lightning-card>
+                                    </lightning-layout-item>
+                                </lightning-layout>
+                            </div>
+                            <footer class="slds-modal__footer">
+                                <lightning-button label="Cancelar" title="Cancelar" onclick={cancelar}
+                                    class="slds-m-left_x-small"></lightning-button>
+                                <lightning-button label="Guardar" title="Guardar" variant="brand" name="guardar"
+                                    class="slds-m-left_x-small" onclick={guardarCaso} disabled={data.botonDeshabilitado} ></lightning-button>
+                            </footer>
+                        </fieldset>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="slds-backdrop slds-backdrop_open"></div>
+    </template>
+
+
+    <template if:true={data.pendientePaseProduccionDetalle}>
+        <lightning-layout vertical-align="stretch" multiple-rows="true">
+            <lightning-layout-item flexibility="auto" padding="around-small" size="12">
+                <lightning-card icon-name="standard:answer_best" title="Pase a Producción">
+                    <lightning-layout vertical-align="stretch" multiple-rows="true">
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="6">
+                            <h1>Tienes Pendiente el Pase a Producción</h1>
+                        </lightning-layout-item>
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="6">
+                            <br />
+                            <lightning-button label="Contestar" title="Contestar" variant="brand" name="contestar"
+                                class="slds-m-left_x-small" onclick={popRespuesta}></lightning-button>
+                        </lightning-layout-item>
+                    </lightning-layout>
+                </lightning-card>
+            </lightning-layout-item>
+        </lightning-layout>
+    </template>
+    <template if:true={data.pendientePaseProduccion}>
+        <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true"
+            aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
+            <div class="slds-modal__container">
+                <header class="slds-modal__header">
+                    <h1 id="modal-heading-06" class="slds-text-heading_medium slds-hyphenate">Pase a Producción</h1>
+                </header>
+                <div class="slds-modal__content slds-p-around_medium ">
+                    <div class="slds-form slds-form_compound slds-align--absolute-left">
+                        <fieldset class="slds-form-element">
+                            <div class="slds-modal__content slds-p-around--medium">
+                                <lightning-layout vertical-align="stretch" multiple-rows="true">
+                                    <lightning-layout-item flexibility="auto" padding="around-small" size="12">
+                                        <lightning-card icon-name="standard:answer_best" title="Pase a Producción">
+                                            <lightning-layout vertical-align="stretch" multiple-rows="true">
+                                                <lightning-layout-item flexibility="auto" padding="around-small" size="6">
+                                                    <lightning-combobox name="aceptaPase" label="Acepta Pase a Producción"
+                                                        value={data.caso.FS_AceptaPaseProducion__c} options={data.listAceptaRespuesta}
+                                                        onchange={handleChange} placeholder="Seleccione una Opción">
+                                                    </lightning-combobox>
+                                                </lightning-layout-item>
+                                                <!--lightning-layout-item flexibility="auto" padding="around-small" size="12">
+                                                    <lightning-textarea name="comentarioParch" label="Comentarios" vaue={data.caso.FS_ComentarioMotivoNoInstalacionParche__c}
+                                                    onchange={handleChange}></lightning-textarea>
+                                                </lightning-layout-item-->
+                                            </lightning-layout>
+                                        </lightning-card>
+                                    </lightning-layout-item>
+                                </lightning-layout>
+                            </div>
+                            <footer class="slds-modal__footer">
+                                <lightning-button label="Cancelar" title="Cancelar" onclick={cancelar}
+                                    class="slds-m-left_x-small"></lightning-button>
+                                <lightning-button label="Guardar" title="Guardar" variant="brand" name="guardar"
+                                    class="slds-m-left_x-small" onclick={guardarCaso} disabled={data.botonDeshabilitado} ></lightning-button>
+                            </footer>
+                        </fieldset>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="slds-backdrop slds-backdrop_open"></div>
+    </template>
+
+
     <template if:true={showSpinner}>
         <div id="activityIndicator" class="slds-spinner_container">
             <div class="slds-spinner--brand slds-spinner slds-spinner--large" role="alert">
