--- a/force-app/main/default/lwc/fs_CrearCaso/fs_CrearCaso.html
+++ b/force-app/main/default/lwc/fs_CrearCaso/fs_CrearCaso.html
@@ -60,7 +60,7 @@
                             <footer class="slds-modal__footer">
                                 <lightning-button label="Cancelar" title="Cancelar" onclick={cancelar}
                                     class="slds-m-left_x-small"></lightning-button>
-                                <lightning-button label="Guardar" title="Guardar" variant="brand" name="guardar"
+                                <lightning-button label="Eliminar" title="Eliminar" variant="brand" name="guardar"
                                     class="slds-m-left_x-small" onclick={eliminarArchivo} disabled={data.botonDeshabilitado} ></lightning-button>
                             </footer>
                         </fieldset>
