--- a/force-app/main/default/lwc/fs_CampoPendienteCaso/fs_CampoPendienteCaso.html
+++ b/force-app/main/default/lwc/fs_CampoPendienteCaso/fs_CampoPendienteCaso.html
@@ -43,7 +43,7 @@
                                                     </p>
                                                 </lightning-layout-item>
                                                 <lightning-layout-item if:true={data.esIncidentePuntual} flexibility="auto" padding="around-small" size="12">
-                                                    <p>Hemos entregado la respuesta al caso, la solución se encuentra disponible en la siguiente URL para su validación <a href={data.caso.FS_URLResultadoAnalasis__c}  target="_blank" > {data.caso.FS_URLResultadoAnalasis__c} </a></b>
+                                                    <p>Hemos entregado la respuesta al caso, la solución se encuentra disponible en la siguiente URL para su validación <a href={data.caso.FS_URLCodigoFuente__c}  target="_blank" > click aquí.</a></b>
                                                     </p>
                                                 </lightning-layout-item>
                                                 <lightning-layout-item flexibility="auto" padding="around-small" size="6">
@@ -270,7 +270,7 @@
                                         <lightning-card icon-name="standard:answer_best" title="Instalación de Parche">
                                             <lightning-layout vertical-align="stretch" multiple-rows="true">
                                                 <lightning-layout-item flexibility="auto" padding="around-small" size="12">
-                                                    <p>Hemos entregado la respuesta al caso, la solución se encuentra disponible en la siguiente URL para su validación <a href={data.caso.FS_URLParcheCliente__c}  target="_blank" > {data.caso.FS_URLParcheCliente__c} </a></b>
+                                                    <p>Hemos entregado la respuesta al caso, la solución se encuentra disponible en la siguiente URL para su validación <a href={data.caso.FS_URLParcheCliente__c}  target="_blank" > click aquí.</a></b>
                                                     </p>
                                                 </lightning-layout-item>
                                                 <lightning-layout-item flexibility="auto" padding="around-small" size="6">
