--- a/force-app/main/default/lwc/fs_Inicio/fs_Inicio.html
+++ b/force-app/main/default/lwc/fs_Inicio/fs_Inicio.html
@@ -29,7 +29,8 @@
             </lightning-layout>
         </lightning-tab>
         <lightning-tab label="Noticias">
-            <iframe width="950" height="700" src="https://www.fisagrp.com/recursos-de-actualidad"></iframe>
+            <iframe width="100%" height="800px" src={data.urlPaginaNoticias}  frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
         </lightning-tab>
         <!--lightning-tab label="Base de Conocimiento">
             <h1>Pendiente</h1>
