--- a/force-app/main/default/lwc/fs_Inicio/fs_Inicio.html
+++ b/force-app/main/default/lwc/fs_Inicio/fs_Inicio.html
@@ -6,7 +6,7 @@
                     <iframe width="350" height="220" src={data.urlVideo1} title={data.tituloVideo1} frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
-                    <h2 style="width: 350px;text-align: center;" ><b >{data.tituloVideo1}</b></h2>
+                    <h2 style="width: 350px;text-align: center;"><b>{data.tituloVideo1}</b></h2>
                 </lightning-layout-item>
                 <lightning-layout-item flexibility="auto" padding="around-small" size="6">
                     <iframe width="350" height="220" src={data.urlVideo2} title={data.tituloVideo2} frameborder="0"
@@ -29,11 +29,38 @@
             </lightning-layout>
         </lightning-tab>
         <lightning-tab label="Noticias">
-            <iframe width="100%" height="800px" src={data.urlPaginaNoticias}  frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
+            <iframe width="100%" height="800px" src={data.urlPaginaNoticias} frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
         </lightning-tab>
-        <!--lightning-tab label="Base de Conocimiento">
-            <h1>Pendiente</h1>
-        </lightning-tab-->
+        <lightning-tab if:true={data.mostrarBaseCon} label="Base de Conocimiento">
+            <lightning-layout vertical-align="stretch" multiple-rows="true">
+                <lightning-layout-item flexibility="auto" padding="around-small" size="2">
+                </lightning-layout-item>
+                <lightning-layout-item flexibility="auto" padding="around-small" size="8">
+                    <lightning-input type="search" value={toAddress}
+                        placeholder="Buscar en Base de Conocmiento..." onchange={onchangeSearch} >
+                    </lightning-input><br />
+                    <template for:each={data.listBaseShow} for:item="item">
+                        <lightning-formatted-rich-text key={item.id} value={item.contenido}>
+                        </lightning-formatted-rich-text>
+                        <br key={item.id} />
+                        <br key={item.id} />
+                    </template>
+                </lightning-layout-item>
+                <lightning-layout-item flexibility="auto" padding="around-small" size="2">
+                </lightning-layout-item>
+            </lightning-layout>
+        </lightning-tab>
     </lightning-tabset>
+
+    <template if:true={showSpinner}>
+        <div id="activityIndicator" class="slds-spinner_container">
+            <div class="slds-spinner--brand slds-spinner slds-spinner--large" role="alert">
+                <span class="slds-assistive-text">Loading, Please Wait...</span>
+                <div class="slds-spinner__dot-a"></div>
+                <div class="slds-spinner__dot-b"></div>
+            </div>
+        </div>
+    </template>
+
 </template>
