--- a/force-app/main/default/lwc/fs_ListaVistaCaso/fs_ListaVistaCaso.html
+++ b/force-app/main/default/lwc/fs_ListaVistaCaso/fs_ListaVistaCaso.html
@@ -39,8 +39,8 @@
                     </div>
                     <span>
                         <div style="margin-left: 600px;" class="slds-form-element__control slds-input-has-icon slds-input-has-icon_right">
-                            <lightning-icon size="x-small" class="slds-icon slds-input__icon slds-input__icon_right slds-icon-text-default" icon-name="utility:search"></lightning-icon>
-                            <input type="text" id="text-input-id-1" placeholder="Buscar en esta lista.." class="slds-input" onchange={onchangeFilter} onclick={onchangeFilter} />
+                            <lightning-input type="search"  placeholder="Buscar en esta lista.." onchange={onchangeFilter} >              
+                            </lightning-input>
                         </div>
                     </span>
                 </div>
