Agrego cambios Solicitud

--- a/force-app/main/default/lwc/fs_CampoPendienteCaso/fs_CampoPendienteCaso.html
+++ b/force-app/main/default/lwc/fs_CampoPendienteCaso/fs_CampoPendienteCaso.html
@@ -159,8 +159,7 @@
                                             <lightning-layout vertical-align="stretch" multiple-rows="true">
                                                 <lightning-layout-item flexibility="auto" padding="around-small" size="12">
                                                     <p>En relación con tu caso N° {data.caso.CaseNumber} hemos comenzado con la revisión de tu
-                                                        solicitud, para darle continuidad al mismo solicitamos tu aprobación previa de un día de
-                                                        trabajo.
+                                                        solicitud, para darle continuidad al mismo solicitamos tu aprobación previa de trabajo.
                                                         <br /><br />Te recordamos que al finalizar lo solicitado estaremos enviándote un resumen de las
                                                         horas consumidas en este requerimiento.
                                                     </p>
