Agrego Salto de Linea

--- a/force-app/main/default/lwc/fs_Inicio/fs_Inicio.html
+++ b/force-app/main/default/lwc/fs_Inicio/fs_Inicio.html
@@ -45,6 +45,7 @@
                         </lightning-formatted-rich-text>
                         <br key={item.id} />
                         <br key={item.id} />
+                        <br key={item.id} />
                     </template>
                 </lightning-layout-item>
                 <lightning-layout-item flexibility="auto" padding="around-small" size="2">
