Cambios Con Johana

--- a/force-app/main/default/lwc/fs_Inicio/fs_Inicio.html
+++ b/force-app/main/default/lwc/fs_Inicio/fs_Inicio.html
@@ -37,16 +37,37 @@
                 <lightning-layout-item flexibility="auto" padding="around-small" size="2">
                 </lightning-layout-item>
                 <lightning-layout-item flexibility="auto" padding="around-small" size="8">
-                    <lightning-input type="search" value={toAddress}
-                        placeholder="Buscar en Base de Conocmiento..." onchange={onchangeSearch} >
-                    </lightning-input><br />
-                    <template for:each={data.listBaseShow} for:item="item">
+                    <lightning-layout vertical-align="stretch" multiple-rows="true">
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="4">
+                            <lightning-combobox label="Producto" placeholder="Seleccione un producto"></lightning-combobox>
+                        </lightning-layout-item>
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="4">
+                            <lightning-combobox label="Módulo" placeholder="Seleccione un módulo"></lightning-combobox>
+                        </lightning-layout-item>
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="4">
+                            <lightning-combobox label="Sub Módulo" placeholder="Seleccione un sub módulo"></lightning-combobox>
+                        </lightning-layout-item>
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="9">
+                            <lightning-input type="search" value={data.valorABuscar}
+                            placeholder="Buscar en Base de Conocmiento..." onchange={onchangeSearch}  >
+                        </lightning-input>
+                        </lightning-layout-item>
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="3">
+                            <br />
+                            <lightning-button label="Ver todo" value="Ver todo" variant="brand" onclick={onclickAllShow} ></lightning-button>
+                        </lightning-layout-item>
+                    </lightning-layout>
+                   <br />
+                    <template for:each={data.listBaseShow} for:item="item" if:true={data.hayResultado} >
                         <lightning-formatted-rich-text key={item.id} value={item.contenido}>
                         </lightning-formatted-rich-text>
                         <br key={item.id} />
                         <br key={item.id} />
                         <br key={item.id} />
                     </template>
+                    <div if:false={data.hayResultado} style="text-align: center;">
+                        <font style="font-size: 25px;" > <b> No se encontraron resultados.</b></font>
+                    </div>
                 </lightning-layout-item>
                 <lightning-layout-item flexibility="auto" padding="around-small" size="2">
                 </lightning-layout-item>
