--- a/force-app/main/default/lwc/fs_Inicio/fs_Inicio.html
+++ b/force-app/main/default/lwc/fs_Inicio/fs_Inicio.html
@@ -39,13 +39,16 @@
                 <lightning-layout-item flexibility="auto" padding="around-small" size="8">
                     <lightning-layout vertical-align="stretch" multiple-rows="true">
                         <lightning-layout-item flexibility="auto" padding="around-small" size="4">
-                            <lightning-combobox label="Producto" placeholder="Seleccione un producto"></lightning-combobox>
+                            <lightning-combobox label="Producto" placeholder="Seleccione un producto"
+                            options={data.listProductos} value={data.productoSelect} onchange={onchangeProduct} ></lightning-combobox>
                         </lightning-layout-item>
                         <lightning-layout-item flexibility="auto" padding="around-small" size="4">
-                            <lightning-combobox label="Módulo" placeholder="Seleccione un módulo"></lightning-combobox>
+                            <lightning-combobox label="Módulo" placeholder="Seleccione un módulo"
+                            options={data.listModulos} value={data.moduloSelect} onchange={onchangeModulo} ></lightning-combobox>
                         </lightning-layout-item>
                         <lightning-layout-item flexibility="auto" padding="around-small" size="4">
-                            <lightning-combobox label="Sub Módulo" placeholder="Seleccione un sub módulo"></lightning-combobox>
+                            <lightning-combobox label="Sub Módulo" placeholder="Seleccione un sub módulo"
+                            options={data.listSubModulos} value={data.subModuloSelect} onchange={onchangeSubModulo} ></lightning-combobox>
                         </lightning-layout-item>
                         <lightning-layout-item flexibility="auto" padding="around-small" size="9">
                             <lightning-input type="search" value={data.valorABuscar}
