--- a/force-app/main/default/lwc/fs_Inicio/fs_Inicio.html
+++ b/force-app/main/default/lwc/fs_Inicio/fs_Inicio.html
@@ -38,17 +38,21 @@
                 </lightning-layout-item>
                 <lightning-layout-item flexibility="auto" padding="around-small" size="8">
                     <lightning-layout vertical-align="stretch" multiple-rows="true">
-                        <lightning-layout-item flexibility="auto" padding="around-small" size="4">
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="3">
                             <lightning-combobox label="Producto" placeholder="Seleccione un producto"
                             options={data.listProductos} value={data.productoSelect} onchange={onchangeProduct} ></lightning-combobox>
                         </lightning-layout-item>
-                        <lightning-layout-item flexibility="auto" padding="around-small" size="4">
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="3">
                             <lightning-combobox label="Módulo" placeholder="Seleccione un módulo"
                             options={data.listModulos} value={data.moduloSelect} onchange={onchangeModulo} ></lightning-combobox>
                         </lightning-layout-item>
-                        <lightning-layout-item flexibility="auto" padding="around-small" size="4">
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="3">
                             <lightning-combobox label="Sub Módulo" placeholder="Seleccione un sub módulo"
                             options={data.listSubModulos} value={data.subModuloSelect} onchange={onchangeSubModulo} ></lightning-combobox>
+                        </lightning-layout-item>
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="3">
+                            <lightning-combobox label="Knowledge" placeholder="Seleccione un Knowledge"
+                            options={data.listPickListBase} value={data.knowledgeSelect} onchange={onchangeKnowledge} ></lightning-combobox>
                         </lightning-layout-item>
                         <lightning-layout-item flexibility="auto" padding="around-small" size="9">
                             <lightning-input type="search" value={data.valorABuscar}
